--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1999,7 +1999,7 @@
       // line up response to target similar to REW
       // limit SW TC level determination range to 20-120hz if bandwidth exceeds it
       // limit SP TC level determination range to 200-2000hz if bandwidth exceeds it
-      const tcLevelOffset = isSub ? await getTrim(idx, Math.max(20, start), Math.min(120, end), "1%2F6", true)
+      const tcLevelOffset = isSub ? await getTrim(idx, Math.max(20, start), Math.min(120, end), "1%2F48", true)
                                   : await getTrim(idx, Math.max(200, start), Math.min(2000, end), "1%2F6", true);
       await fetchSafe('target-level', idx, 75.0 - tcLevelOffset);
       await postNext('Smooth', idx, { smoothing: "Var" });
@@ -2404,20 +2404,20 @@
     }
     async function getAbsLow3dBPoint(idx, isSub=true, start=10, end=320) {
       // finds low -3dB point from mean SPL
-      const idxSPL = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F48") : await getSPL(idx, 500, 2000, "1%2F6");
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
       let rolloff = start;
       for (let i = 0; i < rpArray.length; i++) {
-        if ((rpArray[i] - idxSPL) >= -3) { break; }
+        if ((rpArray[i] - idxSPL) >= (isSub ? Math.min(-3, -subwooferLowShelfMax) : -3)) { break; }
         rolloff *= octave;
       }
       return Math.min(rolloff, end);
     }
     async function getAbsHigh3dBPoint(idx, isSub=true, start=10, end=320) {
       // finds high -3dB point from mean SPL
-      const idxSPL = isSub ? await getSPL(idx, 30, 80) : await getSPL(idx, 500, 2000);
+      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F48") : await getSPL(idx, 500, 2000, "1%2F6");
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
       const octave = Math.pow(2, 1/96);
@@ -2428,19 +2428,18 @@
       }
       return Math.max(rolloff, start);
     }
-    async function getSubwooferLFRolloff(idx, start=10, end=320) {
-      // goal of this function is to find the subwoofer roll-off point within which low shelf can work
+    async function getAbsHigh6dBPoint(idx, isSub=true, start=10, end=320) {
+      // finds high -6dB point from mean SPL
+      const idxSPL = isSub ? await getSPL(idx, 30, 80, "1%2F48") : await getSPL(idx, 500, 2000, "1%2F6");
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
-      const tcArray = response2array(targetResponse, start, end);
-      const arrLength = Math.min(rpArray.length, tcArray.length);
       const octave = Math.pow(2, 1/96);
-      let rolloff = start;
-      for (let i = 0; i < arrLength; i++) {
-        if ((rpArray[i] - tcArray[i]) >= Math.min(-3, -subwooferLowShelfMax)) { break; }
-        rolloff *= octave;
+      let rolloff = end;
+      for (let i = rpArray.length - 1; i >= 0; i--) {
+        if ((rpArray[i] - idxSPL) >= -6) { break; }
+        rolloff /= octave;
       }
-      return Math.min(rolloff, end);
+      return Math.max(rolloff, start);
     }
     async function getSpeakerHFRolloff(idx, start=10000, end=20000) {
       // goal of this function is to find the roll-off past 10k before any HF peaks that can mess with the high shelf
@@ -2458,8 +2457,8 @@
           rolloff = checkFreq;
         }
         // if HF peak exceeds lowest point by 3dB, set roll-off before that peak
-        // also if HF drops below target by max speaker high shelf, stop there otherwise high shelf will fail
-        if ((rpArray[i] - lowestSPL >= 3) || ((rpArray[i] - tcArray[i]) <= Math.min(-3, -speakerHighShelfMax))) { break; }
+        // if HF drops below target by -3dB, stop there otherwise high shelf will fail
+        if ((rpArray[i] - lowestSPL >= 3) || ((rpArray[i] - tcArray[i]) <= -3)) { break; }
         checkFreq *= octave;
       }
       return Math.min(rolloff, end);
@@ -2507,11 +2506,10 @@
     async function calculateSubBandwidth() {
       console.log("Calculating subwoofer bandwidth...")
       // find low freq point based on max low shelf (REW) or -3dB (Audy) & set minXO
-      const subLowFreq = useAudyFiltering ? await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]])
-                                          : await getSubwooferLFRolloff(cmdIdAVGIndices[commandId[nChannels]])
+      const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
       minXO = findNearestXO(2 * subLowFreq);
-      // find high freq -3dB point and set maxXO
-      const subHighFreq = await getAbsHigh3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
+      // find high freq -6dB point (since LPF is 24dB/oct) and set maxXO
+      const subHighFreq = await getAbsHigh6dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
       maxXO = findNearestXO(subHighFreq);
       if (minXO >= maxXO) {
         minXO = maxXO;
